# django_render_docker

./: command_journal.txt
mysite-project/: Dockerfile  pyproject.toml  render.yaml  start.sh
mysite-project/management/commands/: createsu.py
mysite-project/mysite/: settings.py  urls.py
mysite-project/polls/migrations/: 0001_initial.py
